--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "dotenv": "^8.2.0",
     "ejs": "^3.1.2",
     "express": "^4.17.1",
+    "fb-local-chat-bot": "^0.1.42",
     "moment": "^2.24.0",
     "mysql": "^2.18.1",
     "nightmare": "^3.0.2",
@@ -18,6 +19,7 @@
   },
   "devDependencies": {
     "chai": "^4.2.0",
+    "messenger-bot-tester": "^1.3.1",
     "mocha": "^7.2.0"
   },
   "scripts": {
