--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "mysql": "^2.18.1",
     "nightmare": "^3.0.2",
     "request": "^2.88.2",
-    "should": "^13.2.3"
+    "should": "^13.2.3",
+    "supertest": "^4.0.2"
   },
   "devDependencies": {
     "chai": "^4.2.0",
