--- a/package.json
+++ b/package.json
@@ -18,14 +18,16 @@
   },
   "devDependencies": {
     "chai": "^4.2.0",
-    "mocha": "^7.2.0"
-  },
-  "devDependencies": {
-    "messenger-bot-tester": "^1.3.1"
+    "messenger-bot-tester": "^1.3.1",
+    "mocha": "^8.0.1",
+    "start-server-and-test": "^1.11.0"
   },
   "scripts": {
     "start": "node app.js",
-    "test": "mocha"
+    "start-server": "node app.js",
+    "test": "mocha test",
+    "ci": "start-server-and-test start-server http://localhost:3000 test"
+
   },
   "repository": {
     "type": "git",
