--- a/package.json
+++ b/package.json
@@ -11,14 +11,11 @@
     "ejs": "^3.1.2",
     "express": "^4.17.1",
     "moment": "^2.24.0",
+    "mongodb": "^3.5.9",
     "mysql": "^2.18.1",
     "nightmare": "^3.0.2",
     "request": "^2.88.2",
     "should": "^13.2.3"
-  },
-  "devDependencies": {
-    "chai": "^4.2.0",
-    "mocha": "^7.2.0"
   },
   "devDependencies": {
     "messenger-bot-tester": "^1.3.1"
